# skillgrid_hse

./: .gitignore
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  assessment.py  auth.py  candidate.py  company.py  job_posting.py  recruiter.py  skills.py
backend/app/core/: auth.py  config.py  ory.py
backend/app/db/: __init__.py  database.py  init_db.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  assessment.py  auth.py  candidate.py  company.py  job_posting.py  recruiter.py  skills.py
backend/migrations/: env.py
backend/migrations/versions/: 218cc1697431_initial_database_schema.py
backend/nginx/conf/: api.conf  default.conf
backend/scripts/: load_skillpresets.py  load_skills.py  load_tasks.py
frontend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  check-connection.sh  check-ports.sh  deploy-auth-proxy.sh  deploy-ssl.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  nginx.conf  nginx.prod.conf  nginx.simple.conf  package-lock.json  package.json  setup-auth-proxy.sh  setup-ssl.sh  tailwind.config.js  update-auth-ssl.sh
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  reportWebVitals.ts
frontend/src/components/: Layout.tsx
frontend/src/context/: OryContext.tsx
frontend/src/pages/: About.tsx  AssessmentPage.tsx  AssessmentResultsPage.tsx  (+5 more)
