[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["George <gvd2002@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = "^2.0.41"
alembic = "^1.15.2"
pydantic = "^2.11.4"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
